--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 						<figcaption>
 							<h2>#01</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Congregar ações institucionais voltadas</p>
+								<p>ao engajamento e interação dos servidores</p>
+								<p> e colaboradores do INPI, inclusive dos que</p>
+								<p> estejam em teletrabalho, tanto da sede quanto</p>
+								<p>dos escritórios regionais.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
