--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<!-- Top Navigation -->
 			<header class="codrops-header">
-				<h1>Programa Bem Aqui no INPI<span>Programa Motivacional e de Endomarketing<br>do Instituto Nacional da Propriedade Industrial</span></h1>
+				<h1>Programa<br>Bem Aqui no INPI<span>Programa Motivacional e de Endomarketing<br>do Instituto Nacional da Propriedade Industrial</span></h1>
 				<nav class="codrops-demos">
 					<a href="https://bem-aqui-no-inpi.github.io/estrategias">Estratégias</a>
 					<a href="https://bem-aqui-no-inpi.github.io/catalogo">Catálogo</a>
