--- a/index.html
+++ b/index.html
@@ -38,100 +38,105 @@
 							<div>
 								<p>Congregar ações institucionais voltadas</p>
 								<p>ao engajamento e interação dos servidores</p>
-								<p> e colaboradores do INPI, inclusive dos que</p>
-								<p> estejam em teletrabalho, tanto da sede quanto</p>
-								<p>dos escritórios regionais.</p>
+								<p>e colaboradores do INPI, inclusive dos que</p>
+								<p>estejam em teletrabalho, tanto da sede</p>
+								<p>quanto dos escritórios regionais.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-03.png" alt="img03"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#02</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Despertar no corpo funcional do INPI valores</p>
+								<p>que estabeleçam comunicabilidade,</p>
+								<p>solidariedade e senso de unidade,</p>
+								<p>e promovam duradouro bem-estar comum</p>
+								<p>no ambiente laboral e além dele.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-04.png" alt="img04"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#03</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Proporcionar maior integração colaborativa</p>
+								<p>e consolidar o comprometimento do</p>
+								<p>corpo funcional com a missão</p>
+								<p>e os valores do INPI.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-05.png" alt="img05"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#04</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Manter elevado nível de bem-estar físico,</p>
+								<p>mental e social dos servidores</p>
+								<p> e colaboradores do Instituto.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-06.png" alt="img06"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#05</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Encorajar lideranças proativas na</p>
+								<p>consolidação de local de trabalho</p>
+								<p>saudável e apoiar hábitos de</p>
+								<p>promoção do equilíbrio biopsicossocial</p>
+								<p>durante a vida profissional.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-07.png" alt="img07"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#06</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Harmonizar a vida profissional à pessoal,</p>
+								<p>com amparo em visão holística pautada no</p>
+								<p>reconhecimento dos profissionais</p>
+								<p>em todas as suas dimensões.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-08.png" alt="img08"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#07</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Otimizar o clima organizacional do ambiente</p>
+								<p>de trabalho e reduzir os índices de absenteísmo,</p>
+								<p>afastamento laboral e remoção de unidade</p>
+								<p>de lotação por motivos de saúde</p>
+								<p>ou por conflitos internos.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
 					</figure>
 					<figure class="effect-julia">
-						<img src="img/Bem Aqui no INPI-02.png" alt="img02"/>
+						<img src="img/Bem Aqui no INPI-09.png" alt="img09"/>
 						<figcaption>
-							<h2>#01</h2>
+							<h2>#08</h2>
 							<div>
-								<p>Congregar ações institucionais voltadas ao engajamento</p>
-								<p>e interação dos servidores e colaboradores do INPI,</p>
-								<p>inclusive dos que estejam em teletrabalho,</p>
-								<p>tanto da sede quanto dos escritórios regionais.</p>
+								<p>Colaborar com o erguimento de ambiente</p>
+								<p>institucional capaz de atrair e reter talentos,</p>
+								<p>e de estimular experiências e desafios que</p>
+								<p>sobrelevem a autoestima, a motivação,</p>
+								<p>o desenvolvimento contínuo, a atenção à saúde,</p>
+								<p>a qualidade de vida e a cultura de empatia,</p>
+								<p>respeito e confiança no trabalho.</p>
 							</div>
 							<a href="#">View more</a>
 						</figcaption>			
