--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 					</figure>
 				</div>
 		</div><!-- /container -->
-		<div class="footer">
+		<section class="footer">
 			<a href="http://www.inpi.gov.br/" target="_blank"><img src="http://www.inpi.gov.br/arquivos/logo_inpi_branco_fundo_transparente.png" alt="INPI" width="175"></a>
-		</div>
+		</section>
 		<script>
 			// For Demo purposes only (show hover effect on mobile devices)
 			[].slice.call( document.querySelectorAll('a[href="#"') ).forEach( function(el) {
