--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<![endif]-->
 	</head>
 	<body>
+	<section>
 		<div class="container">
 			<!-- Top Navigation -->
 			<header class="codrops-header">
@@ -149,8 +150,9 @@
 				el.addEventListener( 'click', function(ev) { ev.preventDefault(); } );
 			} );
 		</script>
+	</section>
+	<section class="footer">
+		<a href="http://www.inpi.gov.br/" target="_blank"><img src="http://www.inpi.gov.br/arquivos/logo_inpi_branco_fundo_transparente.png" alt="INPI" width="175"></a>
+	</section>
 	</body>
-		<section class="footer">
-			<a href="http://www.inpi.gov.br/" target="_blank"><img src="http://www.inpi.gov.br/arquivos/logo_inpi_branco_fundo_transparente.png" alt="INPI" width="175"></a>
-		</section>
 </html>
