--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<header class="codrops-header">
 				<h1>Programa<br>Bem Aqui no INPI<span>Programa Motivacional e de Endomarketing<br>do Instituto Nacional da Propriedade Industrial</span></h1>
 				<nav class="codrops-demos">
-					<a href="https://bem-aqui-no-inpi.github.io/estrategias">Estratégias</a>
-					<a href="https://bem-aqui-no-inpi.github.io/catalogo">Catálogo</a>
+					<a href="https://bem-aqui-no-inpi.github.io/estrategias" target="_blank">Estratégias</a>
+					<a href="https://bem-aqui-no-inpi.github.io/catalogo" target="_blank">Catálogo</a>
 				</nav>
 			</header>
 			<div class="content">
