--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 						<figcaption>
 							<h2>#07</h2>
 							<div>
-								<p>Otimizar o clima organizacional do ambiente</p>
-								<p>de trabalho e reduzir os índices de absenteísmo,</p>
+								<p>Otimizar o clima organizacional e</p>
+								<p>reduzir os índices de absenteísmo,</p>
 								<p>afastamento laboral e remoção de unidade</p>
 								<p>de lotação por motivos de saúde</p>
 								<p>ou por conflitos internos.</p>
