--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>Objetivos | Bem Aqui no INPI</title>
 		<meta name="description" content="Objetivos do Programa Bem Aqui no INPI" />
-		<meta name="keywords" content="bem-estar, transformação cultural, unidade, pertencimento" />
+		<meta name="keywords" content="bem-estar, motivação, endomarketing, transformação cultural, unidade, pertencimento" />
 		<meta name="author" content="Ouvidoria do INPI" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,800,500,600' rel='stylesheet' type='text/css'>
