--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<nav class="codrops-demos">
 					<a href="https://bem-aqui-no-inpi.github.io/estrategias" target="_blank">Estratégias</a>
 					<a href="https://bem-aqui-no-inpi.github.io/catalogo" target="_blank">Catálogo</a>
+					<a href="https://bem-aqui-no-inpi.github.io/agenda" target="_blank">Agenda</a>
 				</nav>
 			</header>
 			<div class="content">
